add component specific stats page

--- a/fluent-issues-monthly.ipynb
+++ b/fluent-issues-monthly.ipynb
@@ -618,7 +618,7 @@
     "\n",
     "component_stats = {}\n",
     "\n",
-    "for component in component_names:\n",
+    "for component in sorted(component_names):\n",
     "    component_stats[component] = {month: 0 for month in used_months}\n",
     "\n",
     "for month, issues in all_issues.items():\n",
